--- a/dart/dart_application_2/.vscode/launch.json
+++ b/dart/dart_application_2/.vscode/launch.json
@@ -4,12 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "name": "dart_application_2",
             "cwd": "dart/dart_application_2",
             "request": "launch",
             "type": "dart",
-            // "console": "terminal"
+            "console": "terminal"
         }
     ]
 }
