--- a/dart/dart_application_2/.vscode/launch.json
+++ b/dart/dart_application_2/.vscode/launch.json
@@ -5,12 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         
+        
         {
             "name": "dart_application_2",
             "cwd": "dart/dart_application_2",
             "request": "launch",
             "type": "dart",
-            "console": "terminal"
+            // "console": "terminal"
         }
     ]
 }
